hphp/test/slow/protected_internal/method_protected_visibility.php.expectf
Fatal error: Call to protected method A::foo() from context 'B' in %s on line 8
